XW-2774 | make sure we won't wrap menu

--- a/extensions/wikia/PremiumPageHeader/styles/_local-navigation.scss
+++ b/extensions/wikia/PremiumPageHeader/styles/_local-navigation.scss
@@ -127,6 +127,7 @@
 .pph-local-nav-menu {
 	align-items: flex-end;
 	display: flex;
+	white-space: nowrap;
 
 	li:hover {
 		> .pph-local-nav-sub-menu {
